--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lemon",
   "version": "0.0.1",
-  "description": "A minimalist CSS framework",
+  "description": "Minimal and responsive CSS framework for clean starting point",
   "homepage": "https://github.com/appalaszynski/lemon#readme",
   "author": "appalaszynski",
   "keywords": [
@@ -32,8 +32,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^8.5.2",
+    "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
+    "gulp-postcss": "^7.0.1",
+    "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.0"
   }
 }
